Fixing slider for XS to block presumed height Adding magnifying glass for quick jump to full details and screens/images

--- a/less/main.less
+++ b/less/main.less
@@ -169,6 +169,7 @@ article img {
 	width: 100%;
 	height: 100%;
 	display: inline-block;
+	overflow: hidden; 
 }
 
 .slick-slider {
@@ -224,6 +225,7 @@ article img {
 }
 
 .portfolio-teaser {
+	width: ~"calc( 100% - 1px )";
 	.multiLineEllipsis(
 		@portfolio-text-line-height,
 		@portfolio-teaser-line-count,
@@ -261,6 +263,16 @@ article img {
 	.portfolio-more {
 		display: none;
 	}
+	.porfolio-earmark {
+		display: none;
+	}
+}
+
+@media screen and (max-width: @screen-xs-max) {
+	.modal-content .slick-slider
+	{
+		min-height: ~"calc( ( 100vw - 52px - 17px ) / 1.3 )";
+	}
 }
 
 @media screen and (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
@@ -293,7 +305,65 @@ article img {
 	}
 }
 
+.porfolio-picture-wrapper {
+	position: relative;
+	overflow: hidden;
+}
 
+.porfolio-picture-wrapperX::after {
+	background: white;
+	content: "";
+	box-shadow: 1px 1px 5px rgba(146, 142, 142, 0.5);
+	transform: rotate(45deg);
+	position: absolute;
+	width: 20em;
+	opacity: 0.7;
+	top: -19em;
+	height: 20em;
+	right: -10em;
+}
+
+.porfolio-earmark
+{
+	position: absolute;
+	overflow: hidden;
+	right: 15px;
+	top: 0;
+	width: 100px;
+	height: 100px;
+	cursor: pointer;
+	z-index: 500;
+}
+
+.porfolio-picture-wrapper .porfolio-earmark {
+	right: 0;
+}
+
+.porfolio-earmark::before {
+	content: '\1F50E';
+	text-align: center;
+	color: #7d97ad;
+	position: absolute;
+	height: 1.5em;
+	width: 10em;
+	font-size: 25px;
+	top: 5px;
+	right: -100px;
+	z-index: 100;	
+}
+
+.porfolio-earmark::after {
+	background: white;
+	content: "";
+	box-shadow: 1px 1px 5px rgba(146, 142, 142, 0.5);
+	transform: rotate(45deg);
+	position: absolute;
+	width: 20em;
+	opacity: 0.7;
+	top: -19em;
+	height: 20em;
+	right: -10em;
+}
 
 
 
