--- a/less/slick-theme.less
+++ b/less/slick-theme.less
@@ -2,11 +2,13 @@
 
 .slick-dots {
 	bottom: 0;
+	
 }
 
 .slick-dots li.slick-active button:before {
 	color: #fff;
 	font-size: 12px;
+	text-decoration: none;
 	opacity: 1;
 }
 
